------------------------------------------------------------------------
r20 | 2007-10-09 16:54:27 +0400 | 2 lines

Better C99 conformance: macros for format specifiers should only be included in C++ implementations if __STDC_FORMAT_MACROS is defined before <inttypes.h> is included.

------------------------------------------------------------------------
r19 | 2007-07-04 02:14:40 +0400 | 3 lines

Explicitly cast to appropriate type INT8_MIN, INT16_MIN, INT32_MIN and INT64_MIN constants.
Due to their unusual definition in Visual Studio headers (-_Ix_MAX-1) they are propagated to int and thus do not have expected type, causing VS6 strict compiler to claim about type inconsistency.

------------------------------------------------------------------------
r18 | 2007-06-26 16:53:23 +0400 | 2 lines

Better handling of (U)INTx_C macros - now they generate constants of exact width.

------------------------------------------------------------------------
r17 | 2007-03-29 20:16:14 +0400 | 2 lines

Fix typo: Miscrosoft -> Microsoft.

------------------------------------------------------------------------
r16 | 2007-02-24 17:32:58 +0300 | 4 lines

Remove <BaseTsd.h> include, as it is not present in Visual Studio 2005 Epxress Edition and required only for INT_PTR and UINT_PTR types.

'intptr_t' and 'uintptr_t' types now defined explicitly with #ifdef _WIN64.

------------------------------------------------------------------------
r15 | 2007-02-11 20:53:05 +0300 | 2 lines

More correct fix for compilation under VS6.

------------------------------------------------------------------------
r14 | 2007-02-11 20:04:32 +0300 | 2 lines

Bugfix: fix compiling under VS6, when stdint.h enclosed in 'extern "C" {}'.

------------------------------------------------------------------------
r13 | 2006-12-13 16:53:11 +0300 | 2 lines

Make _inline modifier for imaxdiv default option. Use STATIC_IMAXDIV to make it static.
